# language_transfer_clean

./: .gitignore  README.md  SECRET.txt  analysis_english.ipynb  cloze_tasks.json  feature_engineering.py  finetuning.ipynb  finetuning.py  generate_figures.py  generate_plots.py  generate_synthetic_languages.py  language_modeling.py  probe_results.json  probes.py  pyproject.toml  results_table.tex  tokenization.py  training.ipynb  training.py  utils.py  word_features.csv
