[tool.poetry]
name = "language-transfer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "language_transfer"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.0"
torch = "^2.3.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
