[tool.poetry]
name = "language-transfer"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.41.0"
torch = "^2.3.0"
tqdm = "^4.66.4"
einops = "^0.8.0"
jaxtyping = "^0.2.28"
beartype = "^0.18.5"
datasets = "^2.19.1"
scikit-learn = "^1.5.0"
matplotlib = "^3.9.0"
ipython = "^8.24.0"
jupyter = "^1.0.0"
notebook = "^7.2.0"
pandas = "^2.2.2"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
